--- a/1.libft/Makefile
+++ b/1.libft/Makefile
@@ -1,10 +1,20 @@
+
+# ==== PROGRAM NAME ==== #
+
 NAME = libft.a
-LIBC = ar rcs
+
+# ==== CREATE STATIC ARCHIVE ==== #
+
+AR = ar rcs
+
+# ==== FLAGS AND COMPILER ==== #
+
 CC = cc
-RM = rm -f
 CFLAGS = -Wall -Wextra -Werror
 
-SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
+# ==== FILES ==== #
+
+SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
        ft_isprint.c ft_strlen.c ft_memset.c ft_bzero.c \
        ft_memcpy.c ft_memmove.c ft_strlcpy.c ft_strlcat.c \
        ft_calloc.c ft_strdup.c ft_toupper.c ft_tolower.c \
@@ -14,29 +24,40 @@ SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
        ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
        ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
 
-SRCSB = ft_lstnew_bonus.c ft_lstadd_front_bonus.c \
+SRC_BONUS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c \
 	ft_lstsize_bonus.c ft_lstlast_bonus.c \
 	ft_lstadd_back_bonus.c ft_lstdelone_bonus.c \
 	ft_lstclear_bonus.c ft_lstiter_bonus.c \
 	ft_lstmap_bonus.c
 
-OBJS = ${SRCS:.c=.o}
-OBJSB = ${SRCSB:.c=.o}
+OBJ = ${SRC:.c=.o}
+OBJ_BONUS = ${SRC_BONUS:.c=.o}
 
-.c.o:
-	${CC} ${CFLAGS} -c $< -o ${<:.c=.o}
-
-${NAME}: ${OBJS}
-	${LIBC} ${NAME} ${OBJS}
+# ==== RULES ==== #
 
 all: ${NAME}
+	@echo "✅ Compilation terminée !"
 
-bonus: ${NAME} ${OBJSB}
-	${LIBC} ${NAME} ${OBJSB}
+${NAME}: ${OBJ}
+	@echo "📦 Création de l'archive $(NAME)..."
+	@$(AR) $(NAME) $(OBJ)
+
+.c.o:
+	@echo "🔧 Compilation de $<"
+	@$(CC) $(CFLAGS) -c $< -o $@
+
+bonus: $(OBJ_BONUS)
+	@echo "➕ Ajout des bonus à $(NAME)..."
+	@$(AR) $(NAME) $(OBJ_BONUS)
+
 clean:
-	${RM} ${OBJS} ${OBJSB}
+	@echo "🧹 Suppression des fichiers objets..."
+	@rm -f ${OBJ} ${OBJ_BONUS}
 
 fclean: clean
-	${RM} ${NAME} ${bonus} 
+	@echo "🧨 Suppression des exécutables..."
+	@rm -f ${NAME} ${bonus} 
 
 re: fclean all
+
+.PHONY : all bonus clean fclean re
