--- a/2nd_cercle/minitalk/Makefile
+++ b/2nd_cercle/minitalk/Makefile
@@ -7,51 +7,55 @@ NAME_CLIENT = client
 # ==== FLAGS AND COMPILER ==== #
 
 CFLAGS = -Wall -Werror -Wextra -I$(LIBFT_DIR)
-CC = CC
+CC = cc
 
 # ==== FILES ==== #
 
-SRC_SERVER = server.c utils.c 
-SRC_CLIENT = client.c utils.c 
+SRC_SERVER = server.c ft_utils.c 
+SRC_CLIENT = client.c ft_utils.c 
 
-OBJ_SERVER = $(SRC_SERVER:.c=.o)
-OBJ_CLIENT = $(SRC_CLIENT:.c=.o)
+OBJ_DIR = obj
+OBJ_SERVER = $(addprefix $(OBJ_DIR)/, $(SRC_SERVER:.c=.o))
+OBJ_CLIENT = $(addprefix $(OBJ_DIR)/, $(SRC_CLIENT:.c=.o))
 
 # ==== LIBFT ==== #
 
-LIBFT_DIR = ../libft
+LIBFT_DIR = ../../1.libft
 LIBFT_A = $(LIBFT_DIR)/libft.a
 
 # ==== RULES ==== #
 
-all : $(LIBFT_A) $(NAME_SERVER) $(NAME_CLIENT)
+all : $(LIBFT_A) $(OBJ_DIR) $(NAME_SERVER) $(NAME_CLIENT)
 	@echo "✅ Compilation terminée !"
+
+$(OBJ_DIR) :
+	@mkdir -p $(OBJ_DIR)
 
 $(LIBFT_A) :
 	@echo "📚 Compilation de la libft..."
-	@make -C $(LIBFT_A)
+	@make -s -C $(LIBFT_DIR)
 
 $(NAME_SERVER) : $(OBJ_SERVER)
 	@echo "🔧 Link du binaire 'server'..."
-	$(CC) $(CFLAGS) -o $(NAME_SERVER) $(OBJ_SERVER) $(LIBFT_A)
+	@$(CC) $(CFLAGS) -o $(NAME_SERVER) $(OBJ_SERVER) $(LIBFT_A)
 
 $(NAME_CLIENT) : $(OBJ_CLIENT)
 	@echo "🔧 Link du binaire 'client'..."
-	$(CC) $(CFLAGS) -o $(NAME_CLIENT) $(OBJ_CLIENT) $(LIBFT_A)
+	@$(CC) $(CFLAGS) -o $(NAME_CLIENT) $(OBJ_CLIENT) $(LIBFT_A)
 
-%.o: %.c
+$(OBJ_DIR)/%.o: %.c
 	@echo "📦 Compilation de $<"
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 clean :
 	@echo "🧹 Suppression des fichiers objets..."
-	rm -f $(OBJ_SERVER) $(OBJ_CLIENT)
-	make -C $(LIBFT_DIR) clean
+	@make -s -C $(LIBFT_DIR) clean
+	@rm -rf $(OBJ_DIR)
 
 fclean : clean
 	@echo "🧨 Suppression des exécutables..."
-	rm -f $(NAME_SERVER) $(NAME_CLIENT)
-	make -C $(LIBFT_DIR) clean
+	@make -s -C $(LIBFT_DIR) fclean
+	@rm -f $(NAME_SERVER) $(NAME_CLIENT)
 
 re : fclean all
 
