--- a/2nd_cercle/minitalk/.vscode/settings.json
+++ b/2nd_cercle/minitalk/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
+    "42c.formatCommand": "norminette",
+    "editor.formatOnSave": true,
     "files.associations": {
         "ft_minitalk.h": "c"
     }
