--- a/2nd_cercle/push_swap/Makefile
+++ b/2nd_cercle/push_swap/Makefile
@@ -6,50 +6,50 @@ NAME = push_swap
 # ==== COMPILER AND FLAGS ==== #
 
 CC = cc 
-CFLAGS = -Wall -Wextra -Werror -I$(LIBFT_DIR)
+CFLAGS = -Wall -Wextra -Werror -I$(LIBFT_DIR) -I$(PRINTF_DIR)
 
-# ==== FILES ==== #
+# ==== FILES SRC ==== #
 
-SRC =	push_swap.c \
-		1_sorting_functions.c \
-		2_creation_lists.c \
-		3_verifications.c \
-		4_rules.c
+SRC = $(wildcard *.c)
 
 SRC_DIR = ./
 OBJ_DIR = obj
 OBJ = $(patsubst %.c, $(OBJ_DIR)/%.o, $(SRC))
 
-# ==== LIBFT ==== #
+# ==== LIBFT / PRINTF ==== #
 
 LIBFT_DIR = ../../1.libft
+PRINTF_DIR = ../../1st_cercle/printf
 LIBFT_A = $(LIBFT_DIR)/libft.a 
+PRINTF_A = $(PRINTF_DIR)/ft_printf.a 
 
 # ==== RULES ==== #
 
-all : $(LIBFT_A) $(NAME)
+all : $(LIBFT_A) $(PRINTF_A) $(NAME)
 
 $(NAME) : $(OBJ)
-	@echo "🔧 Link du binaire '$(NAME)'..."
-	@$(CC) $(CFLAGS) -o $(NAME) $(OBJ) $(LIBFT_A)
+	@$(CC) $(CFLAGS) -o $(NAME) $(OBJ) $(LIBFT_A) $(PRINTF_A)
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)%.c
 	@mkdir -p $(OBJ_DIR)
-	@echo "📦 Compilation de $<"
+	@echo "🔧 Compilation de $<"
 	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(LIBFT_A) :
-	@echo "📚 Compilation de la libft..."
 	@make -s -C $(LIBFT_DIR)
+	@make bonus -C $(LIBFT_DIR)
+
+$(PRINTF_A) :
+	@make -s -C $(PRINTF_DIR)
 
 clean :
-	@echo "🧹 Suppression des fichiers objets..."
 	@make -s -C $(LIBFT_DIR) clean
+	@make -s -C $(PRINTF_DIR) clean
 	@rm -rf $(OBJ_DIR)
 
 fclean : clean 
-	@echo "🧨 Suppression des exécutables..."
 	@make -s -C $(LIBFT_DIR) fclean
+	@make -s -C $(PRINTF_DIR) fclean
 	@rm -f $(NAME)
 
 re : fclean all
