--- a/1.libft/Makefile
+++ b/1.libft/Makefile
@@ -23,7 +23,7 @@ SRC = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c \
        ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c \
        ft_strmapi.c ft_striteri.c ft_putchar_fd.c \
        ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-	   ft_putchar.c ft_putnbr.c ft_putstr.c
+	   ft_putchar.c ft_putnbr.c ft_putstr.c ft_strcmp.c
 
 SRC_BONUS = ft_lstnew_bonus.c ft_lstadd_front_bonus.c \
 	ft_lstsize_bonus.c ft_lstlast_bonus.c \
