--- a/2nd_cercle/push_swap/.vscode/settings.json
+++ b/2nd_cercle/push_swap/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "C_Cpp.errorSquiggles": "disabled",
     "files.associations": {
-        "push_swap.h": "c"
+        "push_swap.h": "c",
+        "libft.h": "c"
     }
 }
