--- a/3rd_cercle/minishell/libft/Makefile
+++ b/3rd_cercle/minishell/libft/Makefile
@@ -16,8 +16,10 @@ CFLAGS 			= 	-Wall -Wextra -Werror
 
 SRC 			= 	ft_atoi.c ft_bzero.c ft_calloc.c ft_convert_bit_char.c	\
 					ft_convert_char_to_bit.c ft_intlen.c ft_isalnum.c 		\
-					ft_isalpha.c ft_isascii.c ft_isdigit.c ft_isprint.c		\
-					ft_itoa.c ft_lstadd_back.c ft_lstadd_front.c 			\
+					ft_isalpha.c ft_isascii.c ft_isdigit.c 					\
+					ft_isdoublequote.c ft_isoperator.c ft_isprint.c			\
+					ft_issinglequote.c ft_isspace.c ft_itoa.c 				\
+					ft_lstadd_back.c ft_lstadd_front.c 						\
 					ft_lstclear.c ft_lstdelone.c ft_lstiter.c ft_lstlast.c	\
 					ft_lstmap.c ft_lstnew.c ft_lstsize.c ft_memchr.c 		\
 					ft_memcmp.c ft_memcpy.c ft_memmove.c ft_memset.c		\
