--- a/3rd_cercle/minishell/libft/Makefile
+++ b/3rd_cercle/minishell/libft/Makefile
@@ -29,7 +29,8 @@ SRC 			= 	ft_atoi.c ft_bzero.c ft_calloc.c ft_convert_bit_char.c	\
 					ft_strdup.c ft_striteri.c ft_strjoin.c ft_strlcat.c 	\
 					ft_strlcpy.c ft_strlen.c ft_strmapi.c ft_strncmp.c 		\
 					ft_strnstr.c ft_strrchr.c ft_strtrim.c ft_substr.c 		\
-					ft_tolower.c ft_toupper.c ft_isquote.c ft_has_unclosed_quote.c
+					ft_tolower.c ft_toupper.c ft_isquote.c 					\
+					ft_has_unclosed_quote.c ft_strjoin_free.c
 					
 OBJ_DIR 		= 	obj
 OBJ 			= 	$(SRC:%.c=$(OBJ_DIR)/%.o)
