--- a/3rd_cercle/minishell/Makefile
+++ b/3rd_cercle/minishell/Makefile
@@ -32,6 +32,7 @@ SRC 				= 	program/environment/env_prompt_and_list_init.c	\
 						program/functions/export.c						\
 						program/functions/export_utils.c				\
 						program/functions/functions.c					\
+						program/functions/functions_utils.c				\
 						program/functions/cd.c							\
 						program/functions/history.c						\
 						main.c
