--- a/3rd_cercle/minishell/Makefile
+++ b/3rd_cercle/minishell/Makefile
@@ -14,7 +14,7 @@ CFLAGS 				= 	-Wall -Wextra -Werror -g -I. \
 BUILTINS 			= srcs/builtins/ft_exit.c srcs/builtins/ft_env.c \
 					srcs/builtins/ft_export.c srcs/builtins/export_utils.c srcs/builtins/ft_echo.c \
 					srcs/builtins/ft_unset.c srcs/builtins/ft_pwd.c srcs/builtins/pwd_utils.c\
-					srcs/builtins/ft_cd.c srcs/builtins/functions.c 
+					srcs/builtins/ft_cd.c srcs/builtins/ft_exec_builtins.c 
 
 ENVIRONNEMENT		= srcs/environnement/env_utils.c \
 					srcs/environnement/env_prompt_and_list_init.c\
