--- a/3rd_cercle/minishell/libft/Makefile
+++ b/3rd_cercle/minishell/libft/Makefile
@@ -32,7 +32,7 @@ SRC 			= 	ft_atoi.c ft_bzero.c ft_calloc.c ft_convert_bit_char.c	\
 					ft_tolower.c ft_toupper.c ft_isquote.c 					\
 					ft_has_unclosed_quote.c ft_strjoin_free.c ft_strndup.c	\
 					ft_atoll.c ft_isnumeric.c ft_atoi64.c ft_strslen.c		\
-					ft_strjoin_three.c ft_free_tab.c
+					ft_strjoin_three.c ft_free_tab.c ft_putall_fd.c
 					
 OBJ_DIR 		= 	obj
 OBJ 			= 	$(SRC:%.c=$(OBJ_DIR)/%.o)
