--- a/3rd_cercle/minishell/.vscode/settings.json
+++ b/3rd_cercle/minishell/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "minishell.h": "c",
-        "type_traits": "c"
+        "type_traits": "c",
+        "stat.h": "c",
+        "parser.h": "c",
+        "history.h": "c"
     }
 }
