ragement token -> lexer

--- a/3rd_cercle/minishell/Makefile
+++ b/3rd_cercle/minishell/Makefile
@@ -36,12 +36,12 @@ SIGNALS				= srcs/signals/signals.c
 
 PARSER 				= srcs/parser/parse_core.c srcs/parser/parse_utils.c srcs/parser/parse_heredoc.c srcs/parser/parse_redir.c
 
-TOKEN 				= srcs/token/token_operator_utils.c srcs/token/token_utils.c\
-					srcs/token/token_word_utils.c srcs/token/token.c
+LEXER 				= srcs/lexer/token_dollar.c srcs/lexer/token_check.c\
+					srcs/lexer/token_word_scan.c srcs/lexer/token.c srcs/lexer/utils.c
 						
 OBJ_DIR 			= 	obj
 
-SRC					= main.c $(BUILTINS) $(ENVIRONNEMENT) $(EXEC) $(PARSER) $(TOKEN) $(SIGNALS)
+SRC					= main.c $(BUILTINS) $(ENVIRONNEMENT) $(EXEC) $(PARSER) $(LEXER) $(SIGNALS)
 
 OBJ 				= 	$(SRC:%.c=$(OBJ_DIR)/%.o)
 
