norm exec with ft_exec redir init

--- a/3rd_cercle/minishell/Makefile
+++ b/3rd_cercle/minishell/Makefile
@@ -31,7 +31,8 @@ ENVIRONNEMENT		= srcs/environnement/env_utils.c \
 					srcs/environnement/env_vars_init.c
 
 EXEC				= srcs/execution/exec_utils.c srcs/execution/exec.c \
-					srcs/execution/ft_exec_cmd.c srcs/execution/ft_exec_create_here.c
+					srcs/execution/ft_exec_cmd.c srcs/execution/ft_exec_create_here.c \
+					srcs/execution/ft_exec_redir_init.c
 
 SIGNALS				= srcs/signals/signals.c
 
